--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -16,5 +16,6 @@
 @import "partials/nav/menu-expand"
 @import "partials/persons/avatar"
 @import "partials/persons/contacts-list"
+@import "home/pages"
 @import "persons/pages"
 /*! purgecss end ignore */
