--- a/assets/sass/partials/blocks/_pages.sass
+++ b/assets/sass/partials/blocks/_pages.sass
@@ -34,3 +34,10 @@
             text-decoration-color: rgba($white, 0)
             &:hover
                 text-decoration-color: $white
+
+
+    &--cards
+        background-color: rgba(black, .3)
+        .pages
+            .page:hover
+                background-color: rgba(black, .4)
