--- a/assets/sass/partials/blocks/_pages.sass
+++ b/assets/sass/partials/blocks/_pages.sass
@@ -39,5 +39,7 @@
     &--cards
         background-color: rgba(black, .3)
         .pages
-            .page:hover
-                background-color: rgba(black, .4)
+            .page
+                background-color: $body-bg
+                &:hover
+                    background-color: black
