--- a/assets/sass/partials/blocks/_pages.sass
+++ b/assets/sass/partials/blocks/_pages.sass
@@ -41,5 +41,12 @@
         .pages
             .page
                 background-color: $body-bg
+                padding: 0
                 &:hover
                     background-color: black
+                > div:first-of-type
+                    height: 100%
+                    padding: 2rem
+                .more
+                    font-size: 1rem
+                    margin-top: auto
