--- a/assets/sass/_config.sass
+++ b/assets/sass/_config.sass
@@ -64,3 +64,7 @@ $pagination-focus-bg: black
 
 $block-call-to-action-color: white
 $block-call-to-action-background: black
+
+$block-pages-card-background: rgba(black, .3)
+$block-pages-card-page-background: rgba(black, .4)
+$block-pages-card-page-background-hover: black
