block pages card

--- a/assets/sass/_config.sass
+++ b/assets/sass/_config.sass
@@ -66,5 +66,7 @@ $block-call-to-action-color: white
 $block-call-to-action-background: black
 
 $block-pages-card-background: rgba(black, .3)
-$block-pages-card-page-background: rgba(black, .4)
+$block-pages-card-page-background: white
+$block-pages-card-page-color: black
 $block-pages-card-page-background-hover: black
+$block-pages-card-page-color-hover: white
