--- a/assets/sass/partials/blocks/_pages.sass
+++ b/assets/sass/partials/blocks/_pages.sass
@@ -35,8 +35,11 @@
             &:hover
                 text-decoration-color: $white
 
-
     &--cards
+        .main-page
+            > div
+                a::before
+                    content: none
         .pages
             .page
                 padding: 0
