--- a/assets/sass/partials/blocks/_testimonials.sass
+++ b/assets/sass/partials/blocks/_testimonials.sass
@@ -27,8 +27,15 @@
                 margin-left: 0
                 margin-top: 0
 
-    .splide__pagination
+    .splide
+        &__autoplay
+            button
+                color: white
+                font-size: px2rem(14)
         @include media-breakpoint-up(md)
-            bottom: 0
-            left: calc(#{col(3)} - 1rem)
-            position: absolute
+            padding-bottom: $grid-gutter-width
+
+            &__pagination
+                bottom: 0
+                left: calc(#{col(3)} - 1rem)
+                position: absolute
