--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -10,7 +10,7 @@
 @import "partials/blocks/testimonials"
 @import "partials/body/global"
 @import "partials/body/typography"
-@import "partials/footer/stakeholder"
+@import "partials/footer/footer"
 @import "partials/header/header"
 @import "partials/nav/menu"
 @import "partials/nav/menu-expand"
