--- a/layouts/partials/footer/footer-simple.html
+++ b/layouts/partials/footer/footer-simple.html
@@ -1,14 +1,25 @@
 {{ partial "footer/stakeholder.html" }}
 <div class="content">
-  <div>
-    {{ partial "commons/menu.html"
-          (dict
-            "items"       site.Data.menus.legal
-            "level"       1
-            "class"       "nav-legal"
-          )}}
+  <div class="complementary">
+    {{ if site.Data.menus.legal }}
+      {{ partial "commons/menu.html"
+            (dict
+              "items"       site.Data.menus.legal
+              "level"       1
+              "class"       "nav-legal"
+            )}}
+    {{ end }}
+    {{ if site.Data.menus.social }}
+      {{ partial "commons/menu.html"
+            (dict
+              "items"       site.Data.menus.social
+              "level"       1
+              "class"       "nav-social"
+            )}}
+    {{ end }}
     {{ partial "footer/credit.html" }}
   </div>
+  
   <div>
     {{ partial "footer/logo.html" }}
     {{ partial "footer/site.html" }}
