--- a/assets/sass/partials/blocks/_testimonials.sass
+++ b/assets/sass/partials/blocks/_testimonials.sass
@@ -28,14 +28,18 @@
                 margin-top: 0
 
     .splide
-        &__autoplay
-            button
-                color: white
-                font-size: px2rem(14)
+        &__toggle,
+        &__autoplay button
+            color: white
+            font-size: px2rem(14)
         @include media-breakpoint-up(md)
-            padding-bottom: $grid-gutter-width
-
-            &__pagination
-                bottom: 0
-                left: calc(#{col(3)} - 1rem)
-                position: absolute
+            @include in-page-with-aside
+                &__pagination
+                    justify-content: flex-start
+                    margin-left: -1rem
+            @include in-page-without-aside
+                padding-bottom: $grid-gutter-width
+                &__pagination
+                    bottom: 0
+                    left: calc(#{col(3)} - 1rem)
+                    position: absolute
