--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -18,4 +18,5 @@
 @import "partials/persons/contacts-list"
 @import "home/pages"
 @import "persons/pages"
+@import "posts/pages"
 /*! purgecss end ignore */
