test for ios top bar

--- a/assets/sass/partials/body/_global.sass
+++ b/assets/sass/partials/body/_global.sass
@@ -1,6 +1,8 @@
 body
+    background-color: black
     background-image: url('../images/sun-top.svg'), linear-gradient(180deg, black 0%, $body-bg 700px)
-    background-position: top center
+    background-position-x: center
+    background-position-y: top
     background-repeat: no-repeat
     @include media-breakpoint-down(md)
         background-size: 300%, auto
