--- a/assets/sass/partials/blocks/_pages.sass
+++ b/assets/sass/partials/blocks/_pages.sass
@@ -42,6 +42,7 @@
                     content: none
         .pages
             .page
+                aspect-ratio: 1.5
                 padding: 0
                 > div:first-of-type
                     height: 100%
