--- a/assets/sass/_config.sass
+++ b/assets/sass/_config.sass
@@ -53,6 +53,9 @@ $small-font-size: px2rem(14)
 $table-border-color: $border-color
 
 $menu-background-color: black
+$header-color: white !default
+$header-background-color: black !default
+
 $pagination-bg: transparent
 $pagination-border-width: 0
 $pagination-border-radius: 0
