--- a/assets/sass/partials/blocks/_pages.sass
+++ b/assets/sass/partials/blocks/_pages.sass
@@ -50,3 +50,12 @@
                 .more
                     font-size: 1rem
                     margin-top: auto
+
+# Fix https://github.com/noesya/rebootcommunication/commit/3770b0c48eeb7efa3eafeac80e651632e387fcbb
+.block-pages
+    @include in-page-without-aside
+        &--cards
+            .pages
+                > *
+                    @include media-breakpoint-up(xl)
+                        width: 33.33333%
