--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,5 +1,23 @@
 @import "_theme/utils"
-@import "_fonts"
-@import "_configuration"
+@import "utils"
+@import "config"
 @import "_theme/hugo-osuny"
-@import "_style"
+
+/*! purgecss start ignore */
+@import "partials/blocks/call_to_action"
+@import "partials/blocks/gallery"
+@import "partials/blocks/pages"
+@import "partials/blocks/testimonials"
+@import "partials/body/global"
+@import "partials/body/typography"
+@import "partials/footer/footer"
+@import "partials/header/header"
+@import "partials/nav/menu"
+@import "partials/nav/menu-expand"
+@import "partials/persons/avatar"
+@import "partials/persons/contacts-list"
+@import "home/pages"
+@import "persons/pages"
+@import "posts/pages"
+@import "blocks"
+/*! purgecss end ignore */
