--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -1,4 +1,4 @@
-$color-accent: #29e30c
+$color-accent: #ceff00
 $color-text: #FFFFFF
 $color-text-alt: #CCCCCC
 $color-border: rgba(255, 255, 255, 0.1)
