--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -13,6 +13,6 @@ $h1-weight: normal
 $h2-size-desktop: px2rem(30)
 $quote-font-family: $serif-font-family
 
-$header-background: $color-background
+$header-background: transparent
 $header-dropdown-full: true
-$hero-background-color: $color-background
+$hero-background-color: transparent
