--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -1,7 +1,7 @@
-$color-accent: #ceff00
+$color-accent: #baff10
 $color-text: #FFFFFF
 $color-text-alt: #CCCCCC
-$color-border: rgba(255, 255, 255, 0.1)
+$color-border: rgba(0, 0, 0, 0.1)
 $color-background-alt: #111111
 $color-background: #000000
 
@@ -11,8 +11,13 @@ $serif-font-family: "Big Moore", serif
 $h1-font-family: $serif-font-family
 $h1-weight: normal
 $h2-size-desktop: px2rem(30)
+$lead-sidebar-size-desktop: px2rem(40)
 $quote-font-family: $serif-font-family
 
 $header-background: transparent
 $header-dropdown-full: true
 $hero-background-color: transparent
+$hero-height: 300px !default
+$hero-height-desktop: 300px
+$body-overlay-color: rgba(0, 0, 0, 0.8)
+$footer-background-color: $color-background
