--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -1,2 +1,12 @@
 .lead
     color: $color-accent
+
+#document-header
+    .dropdown-menu
+        .nav-level-2
+            a
+                font-weight: bold
+        li
+            p
+                @extend .small
+                margin-top: 10px
