--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -2,22 +2,27 @@ $color-accent: #baff10
 $color-text: #FFFFFF
 $color-text-alt: #CCCCCC
 $color-border: rgba(0, 0, 0, 0.1)
-$color-background-alt: #111111
-$color-background: #000000
+$color-background-alt: #000000
+$color-background: #111111
 
 $body-font-family: "Aestetico", sans-serif
 $heading-font-family: $body-font-family
 $serif-font-family: "Big Moore", serif
-$h1-font-family: $serif-font-family
 $h1-weight: normal
 $h2-size-desktop: px2rem(30)
+$lead-font-family: $serif-font-family
 $lead-sidebar-size-desktop: px2rem(40)
 $quote-font-family: $serif-font-family
 
 $header-background: transparent
 $header-dropdown-full: true
+$header-logo-height: 32px
+$header-logo-height-desktop: 48px
+$header-sticky-background: $color-background-alt
+$header-sticky-color: $color-text
 $hero-background-color: transparent
 $hero-height: 300px !default
 $hero-height-desktop: 300px
 $body-overlay-color: rgba(0, 0, 0, 0.8)
+$breadcrumb-below-h1: true
 $footer-background-color: $color-background
