quite cool, footer missing

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -25,4 +25,4 @@ $hero-height: 300px !default
 $hero-height-desktop: 300px
 $body-overlay-color: rgba(0, 0, 0, 0.8)
 $breadcrumb-below-h1: true
-$footer-background-color: $color-background
+$footer-background-color: $color-background-alt
