--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -36,3 +36,11 @@ body
         margin-bottom: $spacing2
         margin-left: offset(2)
         width: col(8)
+
+.page__home
+    .block-partners
+        .organization
+            h1
+                display: none
+            .media
+                background: transparent
