--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -43,4 +43,7 @@ body
             h1
                 display: none
             .media
+                padding: 0
+                padding-right: $spacing2
                 background: transparent
+                aspect-ratio: 2
