--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -29,8 +29,11 @@ body
 .lead
     color: $color-accent
 
-.hero:not(.hero--with-image)
+.hero
     padding-bottom: 0
+    margin-bottom: $spacing2
+
+.hero:not(.hero--with-image)
     .content > h1
         text-align: center
         margin-bottom: $spacing2
