--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -1,7 +1,7 @@
 $color-accent: #ffc400
 $color-text: #FFFFFF
 $color-text-alt: #CCCCCC
-$color-border: rgba(0, 0, 0, 0.1)
+$color-border: rgba(255, 255, 255, 0.2)
 $color-background-alt: #000000
 $color-background: #111111
 
@@ -19,6 +19,7 @@ $header-dropdown-full: true
 $header-logo-height: 32px
 $header-logo-height-desktop: 48px
 $header-sticky-background: $color-background-alt
+$header-border-bottom-width: 0
 $header-sticky-color: $color-text
 $hero-background-color: transparent
 $hero-height: 300px !default
