--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -3,7 +3,7 @@ $color-text: #FFFFFF
 $color-text-alt: #CCCCCC
 $color-border: rgba(255, 255, 255, 0.2)
 $color-background-alt: #000000
-$color-background: #111111
+$color-background: #222222
 
 $body-font-family: "Aestetico", sans-serif
 $heading-font-family: $body-font-family
@@ -26,4 +26,6 @@ $hero-height: 300px !default
 $hero-height-desktop: 300px
 $body-overlay-color: rgba(0, 0, 0, 0.8)
 $breadcrumb-below-h1: true
-$footer-background-color: $color-background-alt
+$footer-background-color: $color-background
+
+$block-testimonials-color: $color-text
