--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -8,12 +8,21 @@ body
     @include media-breakpoint-down(desktop)
         background-size: 300%, auto
 
-#document-header
+header#document-header
     @include media-breakpoint-up(desktop)
         .container
             flex-direction: column
             .logo
                 margin: 10px 0 30px
+    @include media-breakpoint-down(desktop)
+        nav
+            .logo
+                margin: auto
+                transform: translateX(18px)
+            button[type="button"]
+                align-self: flex-end
+                span:first-of-type
+                    display: none
     .dropdown-menu
         .nav-level-2
             a
@@ -32,13 +41,21 @@ body
 .hero
     padding-bottom: 0
     margin-bottom: $spacing2
+    .container
+        margin-top: $spacing3
+    .content
+        padding-top: 0
 
 .hero:not(.hero--with-image)
     .content > h1
         text-align: center
         margin-bottom: $spacing2
-        margin-left: offset(2)
-        width: col(8)
+        @include media-breakpoint-up(desktop)
+            margin-left: offset(2)
+            width: col(8)
+
+.block-pages--cards .card
+    min-height: 200px
 
 .page__home
     .block-partners
@@ -50,3 +67,29 @@ body
                 padding-right: $spacing2
                 background: transparent
                 aspect-ratio: 2
+
+footer#document-footer
+    @include media-breakpoint-up(desktop)
+        background: $color-background-alt
+        .footer-site
+            a
+                display: none // Pas de lien haut de page en desktop 
+    @include media-breakpoint-down(desktop)
+        align-items: center
+        display: flex
+        flex-flow: column-reverse
+        background-image: url('/assets/images/sun.svg'), linear-gradient($color-background, black)
+        background-position-x: center
+        background-position-y: 235px
+        background-repeat: no-repeat
+        background-size: 1000px auto
+        .container:first-of-type
+            text-align: center
+            padding: $spacing5 0 0
+        .footer-site
+            p
+                font-family: $serif-font-family
+                font-size: px2rem(20)
+                line-height: px2rem(34)
+                max-width: 300px
+                margin: $spacing4 auto
