--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -10,7 +10,7 @@ $heading-font-family: $body-font-family
 $serif-font-family: "Big Moore", serif
 $h1-weight: normal
 $h2-size-desktop: px2rem(30)
-$lead-font-family: $serif-font-family
+$lead-weight: bold
 $lead-sidebar-size-desktop: px2rem(40)
 $quote-font-family: $serif-font-family
 
