--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -96,6 +96,7 @@ footer#document-footer
         .footer-site
             p
                 font-family: $serif-font-family
+                font-style: italic
                 font-size: px2rem(20)
                 line-height: px2rem(34)
                 max-width: 300px
