--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -26,6 +26,13 @@ $hero-height: 300px !default
 $hero-height-desktop: 300px
 $body-overlay-color: rgba(0, 0, 0, 0.8)
 $breadcrumb-below-h1: true
+$breadcrumb-color-active: $color-text-alt
 $footer-background-color: $color-background
+$posts-layout-list: false
 
+$block-pages-card-background: $color-background-alt
+$block-pages-card-page-background: $color-text-alt
+$block-pages-card-page-color: $color-background-alt
+$block-pages-card-page-background-hover: $color-text
+$block-pages-card-page-color-hover: $color-background-alt
 $block-testimonials-color: $color-text
