--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -62,6 +62,8 @@ header#document-header
     min-height: 200px
 
 .page__home
+    .hero
+        margin-bottom: $spacing4
     .block-partners
         .organization
             h1
