--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -57,6 +57,8 @@ header#document-header
         .content > h1
             text-align: center
 
+.toc-cta
+    background: none
 
 .block-pages--cards .card
     min-height: 200px
