--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -12,6 +12,9 @@ $h1-weight: normal
 $h2-size-desktop: px2rem(30)
 $lead-sidebar-size-desktop: px2rem(40)
 $quote-font-family: $serif-font-family
+$quote-size-desktop-short: px2rem(40)
+
+// $spacing3: px2rem(128)
 
 $header-background: transparent
 $header-dropdown-full: true
