--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -79,6 +79,16 @@ header#document-header
             .media
                 background: transparent
 
+.organization
+    .media
+        padding-left: 0
+        padding-right: 20%
+        background: transparent
+    h2, h3
+        display: none
+
+
+
 footer#document-footer
     .container
         align-items: flex-end
