--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -32,3 +32,6 @@ $block-pages-card-page-color: $color-background-alt
 $block-pages-card-page-background-hover: $color-text
 $block-pages-card-page-color-hover: $color-background-alt
 $block-testimonials-color: $color-text
+
+$block-chapter-layout-accent-color: black 
+$block-chapter-layout-alt-color: white
