theme and style

--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -84,8 +84,14 @@ header#document-header
         padding-left: 0
         padding-right: 20%
         background: transparent
+        margin-bottom: 0
+        padding-top: $spacing0
+        padding-bottom: $spacing0
     h2, h3
         display: none
+
+.organizations
+    grid-row-gap: $spacing0
 
 footer#document-footer
     .container
