--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -71,6 +71,9 @@ header#document-header
 .block-pages--cards .card
     min-height: 200px
 
+.block-call_to_action
+    background-image: linear-gradient(68deg, rgba(255,196,0,1) 0%, rgba(255,241,0,1) 38%, rgba(255,143,0,1) 100%)
+
 .page__home
     .hero
         margin-bottom: $spacing4
