--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -72,8 +72,13 @@ header#document-header
     min-height: 200px
 
 .block-call_to_action
-    background-image: linear-gradient(68deg, rgba(255,196,0,1) 0%, rgba(255,241,0,1) 38%, rgba(255,143,0,1) 100%)
-
+    @include in-page-without-sidebar
+        background-image: linear-gradient(68deg, rgba(255,196,0,1) 0%, rgba(255,241,0,1) 38%, rgba(255,143,0,1) 100%)
+    @include in-page-with-sidebar
+        .call_to_action > div
+            &, &::after
+                background-image: linear-gradient(68deg, rgba(255,196,0,1) 0%, rgba(255,241,0,1) 38%, rgba(255,143,0,1) 100%)
+                background-attachment: fixed
 .page__home
     .hero
         margin-bottom: $spacing4
