--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -8,9 +8,11 @@ $color-background: #222222
 $body-font-family: "Aestetico", sans-serif
 $heading-font-family: $body-font-family
 $serif-font-family: "Big Moore", serif
+$h1-size-desktop: px2rem(50)
 $h1-weight: normal
 $h2-size-desktop: px2rem(30)
-$lead-sidebar-size-desktop: px2rem(40)
+$lead-sidebar-size-desktop: px2rem(36)
+$lead-font-family: $serif-font-family
 $quote-font-family: $serif-font-family
 $quote-size-desktop-short: px2rem(40)
 
