--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -34,9 +34,6 @@ header#document-header
                 @include media-breakpoint-up(desktop)
                     margin-top: 10px
 
-.lead
-    color: $color-accent
-
 .hero
     padding-bottom: 0
     margin-bottom: $spacing1
@@ -46,12 +43,14 @@ header#document-header
         padding-top: 0
 
 .hero:not(.hero--with-image)
-    .content > h1
-        text-align: center
-        margin-bottom: $spacing2
-        @include media-breakpoint-up(desktop)
-            margin-left: offset(2)
-            width: col(8)
+    .content > 
+        h1,
+        hgroup
+            text-align: center
+            margin-bottom: $spacing2
+            @include media-breakpoint-up(desktop)
+                margin-left: offset(2)
+                width: col(8)
 .hero
     @include media-breakpoint-down(desktop)
         .content > h1
