--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -11,10 +11,11 @@ $serif-font-family: "Big Moore", serif
 $h1-size-desktop: px2rem(50)
 $h1-weight: normal
 $h2-size-desktop: px2rem(30)
-$lead-sidebar-size-desktop: px2rem(36)
+$lead-sidebar-size-desktop: px2rem(40)
 $lead-font-family: $serif-font-family
 $quote-font-family: $serif-font-family
-$quote-size-desktop-short: px2rem(40)
+$quote-size-desktop-long: $lead-sidebar-size-desktop
+$quote-size-desktop-short: $lead-sidebar-size-desktop
 
 $header-background: transparent
 $header-dropdown-full: true
