--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -29,12 +29,12 @@ $body-overlay-color: rgba(0, 0, 0, 0.8)
 $breadcrumb-color-active: $color-text-alt
 $footer-background-color: $color-background
 
+$block-call-to-action-button-hover-background: $color-text
+$block-chapter-layout-accent-color: black 
+$block-chapter-layout-alt-color: white
 $block-pages-card-background: $color-background-alt
 $block-pages-card-page-background: $color-text-alt
 $block-pages-card-page-color: $color-background-alt
 $block-pages-card-page-background-hover: $color-text
 $block-pages-card-page-color-hover: $color-background-alt
 $block-testimonials-color: $color-text
-
-$block-chapter-layout-accent-color: black 
-$block-chapter-layout-alt-color: white
