--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -7,6 +7,17 @@ body
     @include media-breakpoint-down(desktop)
         background-size: 300%, auto
 
+.rich-text
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    p,
+    ul
+        margin-top: 1rem
+
 header#document-header
     @include media-breakpoint-up(desktop)
         .container
